--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
     "theme-ui": "^0.3.5",
+    "use-timer": "^2.0.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
