--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.1.5",
     "@pelevesque/is-array-in-array": "^1.0.2",
     "@react-hook/hotkey": "^3.1.0",
     "@testing-library/jest-dom": "^5.11.4",
