--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
+    "shallow-equal": "^1.2.1",
     "theme-ui": "^0.3.5",
     "use-timer": "^2.0.1",
     "web-vitals": "^1.0.1"
